Added more search fucntions for tags
